--- a/credentials.ini
+++ b/credentials.ini
@@ -1,2 +1,2 @@
 [gemini_ai]                                       # a session called 'gemini_api' is created
-API_KEY = AIzaSyBS4fBmpCv7UYTD9bksmTPpmlxoN8y7xkQ
+API_KEY = <your_api_key>
